update styles for collapse view (sync some from /Stopwatch)

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,27 +1,21 @@
 .button {
-  width: 100px;
-  height: 100px;
-  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 0.2em;
   text-decoration: none;
   background: none;
-  &button--play {
-    width: 100px;
-    height: 100px;
+  font-size: 1.8em;
+  &.button--expand {
+    font-size: 0.7em;
+    border: 1px solid peru;
   }
-  &button--duplicate {
-    width: 100px;
-    height: 100px;
-  }
-  &button--stop {
-    width: 100px;
-    height: 100px;
-  }
-  &button--pause {
-    width: 100px;
-    height: 100px;
-  }
-  &button--delete {
-    width: 100px;
-    height: 100px;
+  
+  cursor: pointer;
+  &:hover {
+    filter: opacity(60%);
   }
 }
